fixed overlapping drawer

--- a/packages/core/src/components/drawer/drawer.scss
+++ b/packages/core/src/components/drawer/drawer.scss
@@ -13,8 +13,10 @@
 :host {
   @include ix-component;
 
+  position: fixed;
   top: 0;
   right: 0;
+  z-index: 100;
   @include box-shadow(3);
 
   display: block;
@@ -53,7 +55,6 @@
     order: 2;
     height: 100%;
     width: 100%;
-    overflow-y: auto;
   }
 }
 
