--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -30,6 +30,8 @@
     height: 2rem;
     margin-left: 0.5rem;
     color: var(--theme-color-soft-text);
+    top: 50%;
+    transform: translateY(-50%); 
   }
 
   .group-end {
